typescript/checker/tests/conformance/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration9.ts.stderr
error: Unexpected token Some(LBracket)
 --> $DIR/tests/conformance/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration9.ts:2:11
  |
2 |    export [x: string]: string;
  |           ^

